--- a/css/all.css
+++ b/css/all.css
@@ -73,7 +73,7 @@ a{
 }
 
 /*header css*/
-.header{
+#header{
 	height: 70px;
 	padding: 0 30px;
 	display: flex;
@@ -83,12 +83,15 @@ a{
 	border: 2px solid #000;
 	border-bottom: 1px solid #000;
 }
-.header h1 a{
+#header h1 a{
 	font-size: 36px;
 	font-weight: bold;
 	color: #fff;
 }
-.header i{
+#header a[title="購物車"]{
+	position: relative;
+}
+#header i{
 	width: 50px;
 	height: 50px;
 	font-size: 28px;
@@ -97,15 +100,31 @@ a{
 	text-align: center;
 	cursor: pointer;
 }
-.title:hover{
+#header span{
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	width: 20px;
+	height: 20px;
+	border: 2px solid #db0000;
+	border-radius: 10px;
+	font-size: 10px;
+	font-weight: bold;
+	color: #db0000;
+	background: #ffbb00;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+#header .title:hover{
 	color: #e8d3d3;
 }
-.cart:hover{
+#header .cart:hover{
 	color: #f2aeae;
 }
 
 /*content css*/
-.content{
+#content{
 	display: flex;
 	font-size: 24px;
 	font-weight: bold;
@@ -113,7 +132,7 @@ a{
 .classification{
 	flex-basis: 200px;
 	padding: 30px 35px;
-	background: rgba(200, 200, 200, 0.8);
+	background: #ffefef;
 	border: 1px solid #000;
 	border-left: 2px solid #000;
 }
@@ -122,20 +141,166 @@ a{
 	border-bottom: 1px solid #000;
 	cursor: pointer;
 }
-.productlist{
-	flex-basis: 824px;
-	padding: 30px 35px;
-	background: rgba(230, 230, 230, 1);
-	border: 1px solid #000;
-	border-right: 2px solid #000;
+.classificationHover:hover{
+	border: 2px solid #000;
 }
-.classificationName:hover{
+.touchColor{
 	color: #fff;
 	background: #000;
 }
+.productList{
+	display: flex;
+	flex-wrap: wrap;
+	flex-basis: 824px;
+	padding: 30px 10px;
+	background: #edfcf4;
+	border: 1px solid #000;
+	border-right: 2px solid #000;
+}
+.list{
+	width: 31.33%;
+	margin: 0 1% 10px 1%;
+	font-size: 15px;
+	font-weight: normal;
+	cursor: pointer;
+}
+.list ul{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 400px;	
+	border: 1px solid #000;
+}
+.list li{
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
+}
+.listHover:hover{
+	box-shadow: 4px 4px 2px #cc290c, -4px -4px 2px #cc290c;
+}
+.productImg{
+	height: 250px;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.productPrice{
+	padding: 15px 0;
+	background: #fcbfbf;
+}
+.productDetail{
+	flex-basis: 824px;
+	padding: 30px 10px;
+	background: #edfcf4;
+	border: 1px solid #000;
+	border-right: 2px solid #000;
+}
+.productDetail > ul{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.productDetail > ul > li{
+	margin-bottom: 25px;
+	text-align: center;
+}
+.detailImg{
+	width: 320px;
+	height: 320px;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.inputCart{
+	width: 320px;
+	height: 50px;
+	padding: 15px 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #fcbfbf;
+	border: 2px solid #ce682f;
+	transform: translateY(-25px);
+	cursor: pointer;
+}
+.inputCartHover:hover{
+	color: #fff;
+	background: #db2727;
+	border: 2px solid #fcbfbf;
+}
+.alreadyShopping{
+	width: 320px;
+	height: 50px;
+	padding: 15px 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #c9c5bb;
+	border: 2px solid #545350;
+	transform: translateY(-25px);
+	color: #545350;
+}
+.productspec{
+	width: 500px;
+}
+.productspec li{
+	margin-bottom: 5px;
+	font-size: 18px;
+	font-weight: normal;
+}
+
+/*待整理*/
+.cartContent{
+	padding: 30px 10px;
+	border: 1px solid #000;
+	border-left: 2px solid #000;
+	border-right: 2px solid #000;
+	font-size: 18px;
+}
+.cartContent > li{
+	border-bottom: 3px solid #aaa2a2;
+	margin-bottom: 40px;
+}
+.cartTitle{
+	display: flex;
+	border-top: 1px dashed #000;
+	border-bottom: 1px dashed #000;
+	padding: 5px 0;
+}
+.cartTitle li{
+	text-align: center;
+	margin-right: 15px;
+}
+.cartTitleName{
+	width: 465px;
+}
+.cartTitlePrice{
+	width: 250px;
+}
+.cartProduct{
+	display: flex;
+}
+.cartProduct li{
+	margin-right: 15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.cartContentImg{
+	width: 150px;
+	height: 150px;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+.cartProductName{
+	width: 300px;
+}
+.cartProductPrice{
+	width: 250px;
+}
+/*待整理*/
 
 /*footer css*/
-.footer{
+#footer{
 	height: 60px;
 	display: flex;
 	justify-content: center;
